@@ -1,7 +1,7 @@
 AC_INIT(gss-client.c)
 CONFIG_RULES
-AC_HAVE_HEADERS(unistd.h)
-AC_HEADER_CHECK(string.h,AC_DEFINE(USE_STRING_H))
+AC_CHECK_HEADERS(unistd.h stdlib.h)
+AC_CHECK_HEADER(string.h,AC_DEFINE(USE_STRING_H))
 AC_CONST
 AC_PROG_INSTALL
 KRB5_LIBRARIES
